[package]
name = "dverust"
version = "1.0.0"
edition = "2021"

[[bin]]
name = "dvcreate"
path = "src/bin/dvcreate.rs"

[[bin]]
name = "dvapply"
path = "src/bin/dvapply.rs"

[lib]
name = "dverust"
path = "src/lib.rs"

[dependencies]
memmap2 = "0.9"
xxhash-rust = { version = "0.8", features = ["xxh3"] }
sha2 = "0.10"
brotli = "6"
rayon = "1"

[profile.release]
opt-level = 3
lto = "fat"
debug = 0
debug-assertions = false
strip = "debuginfo"
panic = 'abort'
incremental = false
codegen-units = 1
rpath = false